--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
-touch ~/Dev/trackerZ/src/__init__.py
-touch ~/Dev/trackerZ/src/models/__init__.py
-touch ~/Dev/trackerZ/src/services/__init__.py
+[pytest]
+minversion = 7.0
+addopts = -ra -q
+testpaths =
+    tests
